--- a/src/app/components/card-product/card-product.component.html
+++ b/src/app/components/card-product/card-product.component.html
@@ -4,10 +4,10 @@
   >
     <!-- Imagen -->
     <div
-      class="w-52 h-52 bg-yellow-50 flex items-center justify-center mx-auto rounded-lg overflow-hidden"
+      class="w-52 aspect-square bg-yellow-50 flex items-center justify-center mx-auto rounded-lg overflow-hidden"
     >
       <img
-        class="w-full h-full object-cover rounded-md contrast-125 hover:contrast-150 brightness-105 hover:brightness-110 transition duration-300"
+        class="w-full h-full object-cover rounded-md"
         [src]="product.images?.[0] || 'img/1.png'"
         alt="product image"
       />
