--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -77,8 +77,9 @@
         >
           <p class="font-semibold mb-2">
             🛒 <strong>Todos los productos se realizan a pedido</strong><br />
-            Seña del <span class="text-red-600 font-bold">50%</span> para
-            confirmar.
+            Con una seña del
+            <span class="text-red-600 font-bold">50%</span> para su
+            confirmacion.
           </p>
         </div>
 
@@ -165,8 +166,8 @@
       >
         <p class="font-semibold mb-2">
           🛒 <strong>Todos los productos se realizan a pedido</strong><br />
-          Seña del <span class="text-red-600 font-bold">50%</span> para
-          confirmar.
+          Con una seña del
+          <span class="text-red-600 font-bold">50%</span> para su confirmacion.
         </p>
       </div>
       <div class="flex justify-center flex-col items-center mb-8">
